# TASC

./: CMakeLists.txt  FindLibGSL.cmake  README.md  rebuild.sh
example/: ax.txt  ercc.txt  output.abkt  output.de  output.vd  x.txt  y.txt
python/: availableLetters.py
src/: TASC.cpp
src/bio_var_computer/: BioVarComputer.cpp  BioVarComputer.h  BioVarRunner.cpp  BioVarRunner.h  NIMResult.cpp  NIMResult.h  NimArgs.cpp  NimArgs.h  NimMarginalLikelihood.cpp  NimMarginalLikelihood.h
src/em_nim_algo/: DEArgs.cpp  DEArgs.h  DEResult.cpp  DEResult.h  EMResult.cpp  EMResult.h  EMRunner.cpp  EMRunner.h  EMThreads.cpp  EMThreads.h  NIMRunner.cpp  NIMRunner.h  NIMThreads.cpp  NIMThreads.h  adaptiveIntegrate.cpp  adaptiveIntegrate.h  likelihood_functions.cpp  likelihood_functions.h
src/misc/: CLIArgs.cpp  CLIArgs.h  ParsedCountsY.cpp  ParsedCountsY.h  ParsedCovariatesX.cpp  ParsedCovariatesX.h  ParsedData.cpp  ParsedData.h  ParsedERCC.cpp  ParsedERCC.h  basic_math.cpp  basic_math.h  cheng_quad.cpp  cheng_quad.h  command_line_parser.cpp  command_line_parser.h  utils.cpp  utils.h
src/param_estimation/: InitMargLklhoodArgs.cpp  InitMargLklhoodArgs.h  IntegrationArgs.cpp  IntegrationArgs.h  init_integrand.cpp  init_integrand.h  logistic_regression_irls.cpp  logistic_regression_irls.h
